# Speditor

./: .gitignore  CMakeLists.txt  README.md
impl/: timepoint.hpp
impl/tools/: logger.hpp
include/: city.hpp  clock.hpp  crossroads.hpp  duration.hpp  map.hpp  node.hpp  node_type.hpp  road.hpp  route.hpp  schedule.hpp  timepoint.hpp
include/navigation/: city.hpp  map.hpp  node.hpp  node_type.hpp  road.hpp
include/routing_policy/: abstract.hpp  economical.hpp  fastest.hpp  policies.hpp  shortest.hpp
include/tasks/: queue.hpp  task.hpp
include/tools/: log_macros.hpp  log_type.hpp  logger.hpp
include/traffic_policy/: abstract.hpp  chain.hpp  morning.hpp  policy.hpp  sinus.hpp
src/: city.cpp  clock.cpp  duration.cpp  map.cpp  node.cpp  road.cpp  route.cpp  schedule.cpp  timepoint.cpp
src/routing_policy/: economical.cpp  fastest.cpp  shortest.cpp
src/tasks/: queue.cpp  task.cpp
src/tools/: logger.cpp
src/traffic_policy/: chain.cpp  morning.cpp  sinus.cpp
tests/: CMakeLists.txt  clock.cpp  logger.cpp  map.cpp  route.cpp  run_tests.sh  schedule.cpp  timepoint.cpp  traffic_policy.cpp
